assets/css/style.css
/* ... */
@media screen and (max-width: 900px) {
	.container--outer {
		width: 100%;
		margin: 0 auto;
	}
	.widget {
		margin-bottom: 20px;
	}
	.footer__container {
		display: block;
	}
	.footer__links {
		padding-bottom: 8px;
		padding-bottom: 0.5rem;
		text-align: center;
	}
	.footer__copyright {
		position: relative;
		text-align: center;
	}
}

@media screen and (max-width: 893px) {
	.main.page {
		justify-content: center;
	}
	
	.wrapper{
		margin: 0;
	}
}

@media screen and (max-width: 767px) {
	/* 
	? Menu
	*/
	.navigation.show {
		right: 0%;
		transition: all .5s;
		opacity: 1;
	}
	.navbar-nav {
		flex-direction: column;
		transition: all .3s ease;
	}
	.nav-item {
		justify-content: start;
		padding-left: 23px;
		transition: all .3s ease;
	}
	.nav-item.current[custom-title]::after {
		color: var(--heading-color);
	}
	[custom-title]:hover::before {
		display: none;
	}
	.toc_class, #slider_sidebar {
		display: none;
	}
	.wrapper {
		/* display: block; */
		padding-right: 20px;
	}
	.container .header__container {
		height: 54px;
		justify-content: space-between;
	}
	.sidebar {
		display: none;
		float: none;
		width: 100%;
		margin: 0;
		visibility: hidden;
		transition: all .5s;
	}
	.logo__link {
		z-index: -1;
	}
	.sidebar {
		margin-top: 0px;
	}
	.body.scroll-disabled {
		overflow-y: hidden;
	}
}

@media screen and (max-width: 620px) {
	input[type=text], input[type=email], input[type=tel], input[type=url] {
		width: 88%;
	}
	/* .sidebar{
		float: none;
		width: 100%;
		visibility: hidden;
	} */
	.meta__item {
		display: block;
		margin-left: 0;
	}
	.authorbox {
		text-align: center;
	}
	.authorbox__avatar {
		display: inline-block;
		float: none;
		margin: 0 0 20px;
	}
	.pager {
		display: block;
	}
	.pager__item {
		min-width: 100%;
		text-align: center;
	}
	.pager__item--prev {
		padding-bottom: 25px;
	}
	.content ul, .content ol {
		margin: 0 0 20px 20px;
	}
	.content ul ul, .content ol ol, .content ol ul, .content ul ol {
		margin: 0 0 0 20px;
	}
}

@media screen and (max-width: 498px) {

	.main.page{
		grid-template-columns: repeat(auto-fit, 300px);
	}

	.list__item {
		min-width: 50%;
		width: 100%;
		height: 100%;
		/* margin: 0; */
	}
	.list__thumbnail {
		align-items: center;
		/* max-width: 80%; */
	}
}

@media screen and (max-width: 340px) {
	body {
		resize: none;
	}
}

/*Shortcodes*/

/* 
?███████╗██╗  ██╗ ██████╗ ██████╗ ████████╗ ██████╗ ██████╗ ██████╗ ███████╗███████╗
?██╔════╝██║  ██║██╔═══██╗██╔══██╗╚══██╔══╝██╔════╝██╔═══██╗██╔══██╗██╔════╝██╔════╝
?███████╗███████║██║   ██║██████╔╝   ██║   ██║     ██║   ██║██║  ██║█████╗  ███████╗
?╚════██║██╔══██║██║   ██║██╔══██╗   ██║   ██║     ██║   ██║██║  ██║██╔══╝  ╚════██║
?███████║██║  ██║╚██████╔╝██║  ██║   ██║   ╚██████╗╚██████╔╝██████╔╝███████╗███████║
?╚══════╝╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝╚══════╝
*/

/* dir.html */

.direktori, code {
	color: var(--primary-text-color);
	background-color: var(--direktori-bg-color);
	border-radius: 5px;
	padding: 3px;
}

/*scCode.html*/

pre.bC {
	margin: 0;
	padding: 0;
	line-height: 1.5;
	white-space: inherit;
	border: 0;
	border-left: 5px solid;
	width: auto;
	border-radius: 0 0 10px 10px;
}

code.bC {
	margin: 0;
	padding: 20px 0 20px 15px;
	white-space: pre;
	font-family: "Cascadia Code";
	max-height: 400px;
	overflow: auto;
	border: 0;
	border-radius: 0;
	/* overflow: scroll; */
}

/* Tooltip */

.tooltip {
	position: relative;
	float: right;
}

.tooltip .tooltiptext {
	visibility: hidden;
	width: 140px;
	background-color: var(--tooltiptext-color);
	color: var(--primary-text-color);
	text-align: center;
	border-radius: 6px;
	padding: 3px;
	position: absolute;
	z-index: 1;
	bottom: 2;
	left: -100;
	margin-left: -150px;
	opacity: 0;
	transition: opacity 0.3s;
	font-size: .9em;
}

.tooltip .tooltiptext::after {
	content: "";
	position: absolute;
	top: 35%;
	left: 100%;
	margin-left: 0px;
	border-width: 5px;
	border-style: solid;
	border-color: transparent transparent transparent var(--tooltiptext-color);
}

.tooltip:hover .tooltiptext {
	visibility: visible;
	opacity: 1;
}

/*-------------------------- Border color --------------------------*/

pre.bC.Powershell {
	border-left-color: #012456;
}

pre.bC.Shell {
	border-left-color: #3e474a;
}

pre.bC.Bash {
	border-left-color: #3e474a;
}

pre.bC.Python {
	border-left-color: green;
}

pre.bC.TOML {
	border-left-color: #9c4221;
}

pre.bC.JSON {
	border-left-color: #d8c83e;
}

/* -------------------------------------------------------------------- */

.bC::-webkit-scrollbar {
	visibility: hidden;
	width: 100%;
}

.bC::-webkit-scrollbar-thumb {
	background: var(--bC-color);
	transition: 0.2s;
}

.bC:hover::-webkit-scrollbar {
	visibility: visible;
}

.bC:hover::-webkit-scrollbar-track {
	background: var(--bC-color);
}

.bC:hover::-webkit-scrollbar-thumb {
	background: var(--code-header-color);
}

.code-header {
	height: 30px;
	display: block;
	background-color: var(--code-header-color);
	border: 0;
	border-radius: 10px 10px 0 0;
	/* border-left: 5px solid; */
}

.code-title {
	font-family: MesloGS NF Bold;
	color: var(--primary-text-color);
	padding-left: 15px;
}

.chroma {
	margin-bottom: 30px;
}

.chroma .fa-copy {
	opacity: 0%;
	float: right;
	position: relative;
	line-height: normal;
	cursor: pointer;
	margin: 0 0 0 6px;
	padding: 7px 15px 0 0;
	transition: 0.1s;
	color: var(--icon-fill-color);
}

.chroma:hover .fa-copy {
	opacity: 100%;
}

.fa-copy:hover {
	color: var(--primary-text-color);
}

.fa-copy:active {
	color: var(--highlight-color)
}

.chroma .bC {
	scrollbar-color: var(--bC-color) var(--bC-color);
}

.chroma:hover .bC {
	scrollbar-color: var(--code-header-color) var(--bC-color);
}

.chroma .bC::selection {
	color: var(--bC-color);
	background-color: var(--primary-text-color);
}
/* ... */

